--- a/main/Stats.ipynb
+++ b/main/Stats.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_with_outliers = pd.read_csv(\"./results/results.csv\")\n"
+    "df_with_outliers = pd.read_csv(\"./results/ted_number_errors.csv\")\n"
    ]
   },
   {
