added errors for expr

--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -395,31 +395,31 @@
      "text": [
       "Treating schema : 1\n",
       "{'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b']}}}, {'type': 'integer'}]}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['required', 'type']\n",
+      "{'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b']}}}, {'type': 'integer'}]}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 2\n",
       "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['type', 'minProperties']\n",
+      "{'required': ['something'], 'properties': {'something': {'required': ['name'], 'properties': {'name': {'anyOf': [{'type': 'object', 'description': 'Cool! We got a string here!', 'required': ['a'], 'properties': {'a': {'type': 'object', 'properties': {'b': {'type': 'string'}}, 'required': ['b'], 'minProperties': 2}}}, {'type': 'integer'}]}}}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 3\n",
       "{'type': 'object', 'properties': {'name': {'type': 'string'}}, 'not': {'required': ['name']}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['type', 'required']\n",
+      "{'type': 'object', 'properties': {'name': {'type': 'string'}}, 'not': {'required': ['name']}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 4\n",
       "{'type': 'object', 'properties': {'email': {'type': 'string', 'format': 'email'}, 'phone': {'type': 'string', 'pattern': '^\\\\d{10}$'}}, 'allOf': [{'not': {'required': ['email', 'phone']}}, {'anyOf': [{'required': ['email']}, {'required': ['phone']}]}], '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "[]\n",
+      "{'type': 'object', 'properties': {'email': {'type': 'string', 'format': 'email'}, 'phone': {'type': 'string', 'pattern': '^\\\\d{10}$'}}, 'allOf': [{'not': {'required': ['email', 'phone']}}, {'anyOf': [{'required': ['email']}, {'required': ['phone']}]}], '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 5\n",
       "{'type': 'object', 'properties': {'email': {'type': 'string', 'format': 'email'}, 'phone': {'type': 'string', 'pattern': '^\\\\d{10}$'}}, 'allOf': [{'not': {'required': ['email', 'phone']}}, {'anyOf': [{'required': ['email']}, {'required': ['phone']}]}], '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['required']\n",
+      "{'type': 'object', 'properties': {'email': {'type': 'string', 'format': 'email'}, 'phone': {'type': 'string', 'pattern': '^\\\\d{10}$'}}, 'allOf': [{'not': {'required': ['email', 'phone']}}, {'anyOf': [{'required': ['email']}, {'required': ['phone']}]}], '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 6\n",
       "{'type': 'object', 'patternProperties': {'^property[0-9]+$': {'type': 'string'}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['type']\n",
+      "{'type': 'object', 'patternProperties': {'^property[0-9]+$': {'type': 'string'}}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 7\n",
       "{'not': {'type': 'string'}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
-      "['type']\n",
+      "{'not': {'type': 'string'}, '$schema': 'https://json-schema.org/draft/2019-09/schema'}\n",
       "Treating schema : 8\n",
       "{'$schema': 'https://json-schema.org/draft/2019-09/schema', '$id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'prefixItems': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n",
-      "[]\n",
+      "{'$schema': 'https://json-schema.org/draft/2019-09/schema', '$id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'prefixItems': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n",
       "Treating schema : 9\n",
       "{'$schema': 'https://json-schema.org/draft/2019-09/schema', 'title': 'COBRA', 'description': 'JSON representation of COBRA model', 'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'description': {'type': 'string'}, 'version': {'type': 'integer', 'default': 1}, 'reactions': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'metabolites': {'type': 'object', 'patternProperties': {'.*': {'type': 'number'}}}, 'gene_reaction_rule': {'type': 'string'}, 'lower_bound': {'type': 'number'}, 'upper_bound': {'type': 'number'}, 'objective_coefficient': {'type': 'number', 'default': 0}, 'variable_kind': {'type': 'string', 'pattern': 'integer|continuous', 'default': 'continuous'}, 'subsystem': {'type': 'string'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name', 'metabolites', 'lower_bound', 'upper_bound', 'gene_reaction_rule'], 'additionalProperties': False}}, 'metabolites': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'compartment': {'type': 'string', 'pattern': '[a-z]{1,2}'}, 'charge': {'type': 'integer'}, 'formula': {'type': 'string'}, '_bound': {'type': 'number', 'default': 0}, '_constraint_sense': {'type': 'string', 'default': 'E', 'pattern': 'E|L|G'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name', 'compartment'], 'additionalProperties': False}}, 'genes': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name'], 'additionalProperties': False}}, 'compartments': {'type': 'object', 'patternProperties': {'[a-z]{1,2}': {'type': 'string'}}}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'reactions', 'metabolites', 'genes'], 'additionalProperties': False}\n",
-      "['type', 'pattern', 'annotation', 'notes']\n"
+      "{'$schema': 'https://json-schema.org/draft/2019-09/schema', 'title': 'COBRA', 'description': 'JSON representation of COBRA model', 'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'description': {'type': 'string'}, 'version': {'type': 'integer', 'default': 1}, 'reactions': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'metabolites': {'type': 'object', 'patternProperties': {'.*': {'type': 'number'}}}, 'gene_reaction_rule': {'type': 'string'}, 'lower_bound': {'type': 'number'}, 'upper_bound': {'type': 'number'}, 'objective_coefficient': {'type': 'number', 'default': 0}, 'variable_kind': {'type': 'string', 'pattern': 'integer|continuous', 'default': 'continuous'}, 'subsystem': {'type': 'string'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name', 'metabolites', 'lower_bound', 'upper_bound', 'gene_reaction_rule'], 'additionalProperties': False}}, 'metabolites': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'compartment': {'type': 'string', 'pattern': '[a-z]{1,2}'}, 'charge': {'type': 'integer'}, 'formula': {'type': 'string'}, '_bound': {'type': 'number', 'default': 0}, '_constraint_sense': {'type': 'string', 'default': 'E', 'pattern': 'E|L|G'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name', 'compartment'], 'additionalProperties': False}}, 'genes': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'name'], 'additionalProperties': False}}, 'compartments': {'type': 'object', 'patternProperties': {'[a-z]{1,2}': {'type': 'string'}}}, 'notes': {'type': 'object'}, 'annotation': {'type': 'object'}}, 'required': ['id', 'reactions', 'metabolites', 'genes'], 'additionalProperties': False}\n"
      ]
     }
    ],
@@ -434,8 +434,14 @@
     "    print(f\"Treating schema : {dir}\")\n",
     "    schema_dir = f'{dataset_dir}/{dir}/schema-migrated.json'\n",
     "    instance_dir=f'{dataset_dir}/{dir}/instance.json'\n",
+    "    result=validate_instance(schema_dir,instance_dir)\n",
     "    errors=get_errors_validation(schema_dir,instance_dir)\n",
-    "    print(errors)"
+    "    \n",
+    "    # print(errors)\n",
+    "    with open(f'{dataset_dir}/{dir}/errors.json','w') as f :\n",
+    "        res = result.output(\"verbose\")\n",
+    "        res['total_errors'] = errors\n",
+    "        json.dump(res,f,indent=2) "
    ]
   }
  ],
